@@ -23,4 +23,3 @@ if serial:
 version = scope.get_fw_version()
 if version:
     print( 'FW version:', hex( version ) )
-
