@@ -1,3 +1,4 @@
+2022-03-14: Adapt calibration file format for OH6022 persistent offset storage [3cac630]
 2022-03-08: Improved exception and error handling in LibUsbScope, doc update [dc05698]
 2022-03-01: new sample rates 32k, 640k, doc update, tools update [4cb4edb]
 2022-02-28: upversion to FW0210, new sample rate 128 kS/s (ID: 113) [f4755d2]
